--- a/sites/beryl/src/pages/index.astro
+++ b/sites/beryl/src/pages/index.astro
@@ -3,5 +3,6 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <h1 class="text-5xl text-center text-primary">Welcome to Astro.</h1>
+  <h1 class="title text-center text-primary">Welcome to Astro.</h1>
+  <h1 class="text-2xl text-center text-custom">secondary text</h1>
 </Layout>
